--- a/connectwithpeerid/libp2p/dial.html
+++ b/connectwithpeerid/libp2p/dial.html
@@ -219,9 +219,9 @@ window.addEventListener("DOMContentLoaded", main2);
 
   </ul>
   <ul class="simple nested-toc-section">connect
-      <li><a class="reference" href="#connect.e%2CDial%2Cseq%5BMultiAddress%5D"
-    title="connect(self: Dial; addrs: seq[MultiAddress]; allowUnknownPeerId = false): Future[
-    PeerId]">connect(self: Dial; addrs: seq[MultiAddress]; allowUnknownPeerId = false): Future[
+      <li><a class="reference" href="#connect.e%2CDial%2CMultiAddress"
+    title="connect(self: Dial; address: MultiAddress; allowUnknownPeerId = false): Future[
+    PeerId]">connect(self: Dial; address: MultiAddress; allowUnknownPeerId = false): Future[
     PeerId]</a></li>
   <li><a class="reference" href="#connect.e%2CDial%2CPeerId%2Cseq%5BMultiAddress%5D"
     title="connect(self: Dial; peerId: PeerId; addrs: seq[MultiAddress]; forceDial = false): Future[
@@ -299,8 +299,8 @@ class="link-seesrc" target="_blank">Source</a>
 
 </dd>
 </div>
-<div id="connect.e,Dial,seq[MultiAddress]" class="tohide">
-<dt><pre><span class="Keyword">method</span> <a href="#connect.e%2CDial%2Cseq%5BMultiAddress%5D"><span class="Identifier">connect</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="dial.html#Dial"><span class="Identifier">Dial</span></a><span class="Other">;</span> <span class="Identifier">addrs</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><a href="multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">allowUnknownPeerId</span> <span class="Other">=</span> <span class="Identifier">false</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span>
+<div id="connect.e,Dial,MultiAddress" class="tohide">
+<dt><pre><span class="Keyword">method</span> <a href="#connect.e%2CDial%2CMultiAddress"><span class="Identifier">connect</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="dial.html#Dial"><span class="Identifier">Dial</span></a><span class="Other">;</span> <span class="Identifier">address</span><span class="Other">:</span> <a href="multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">;</span> <span class="Identifier">allowUnknownPeerId</span> <span class="Other">=</span> <span class="Identifier">false</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span>
     <a href="peerid.html#PeerId"><span class="Identifier">PeerId</span></a><span class="Other">]</span> {.<span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">stackTrace</span><span class="Other">:</span> <span class="DecNumber">false</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
               <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
@@ -378,7 +378,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-12-08 10:12:47 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-12-08 15:06:13 UTC</small>
       </div>
     </div>
   </div>
